examples/avm-res-web-site/0.21.7/submodules/config_logs/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_logs submodule

This submodule manages the logging configuration (`Microsoft.Web/sites/config`, name: `logs`) for an Azure App Service site.

It can be used independently to configure logging settings on an existing site.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_application_logs"></a> [application\_logs](#input\_application\_logs)

Description: Application log settings.

- `azure_blob_storage` - (Optional) Azure Blob Storage configuration for application logs.
  - `level` - (Optional) The log level. Defaults to `Off`.
  - `retention_in_days` - (Optional) The retention period in days. Defaults to `0`.
  - `sas_url` - (Required) The SAS URL to the Azure Blob Storage container.
- `file_system` - (Optional) File system configuration for application logs.
  - `level` - (Optional) The file system log level. Defaults to `Off`.

Type:

```hcl
object({
    azure_blob_storage = optional(object({
      level             = optional(string, "Off")
      retention_in_days = optional(number, 0)
      sas_url           = string
    }))
    file_system = optional(object({
      level = optional(string, "Off")
    }), {})
  })
```

Default: `null`

### <a name="input_detailed_error_messages"></a> [detailed\_error\_messages](#input\_detailed\_error\_messages)

Description: Should detailed error messages be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_failed_requests_tracing"></a> [failed\_requests\_tracing](#input\_failed\_requests\_tracing)

Description: Should failed request tracing be enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_http_logs"></a> [http\_logs](#input\_http\_logs)

Description: HTTP log settings.

- `azure_blob_storage` - (Optional) Azure Blob Storage configuration for HTTP logs.
  - `retention_in_days` - (Optional) The retention period in days. Defaults to `0`.
  - `sas_url` - (Required) The SAS URL to the Azure Blob Storage container.
- `file_system` - (Optional) File system configuration for HTTP logs.
  - `retention_in_days` - (Optional) The retention period in days. Defaults to `0`.
  - `retention_in_mb` - (Required) The maximum size in MB before being rotated.

Type:

```hcl
object({
    azure_blob_storage = optional(object({
      retention_in_days = optional(number, 0)
      sas_url           = string
    }))
    file_system = optional(object({
      retention_in_days = optional(number, 0)
      retention_in_mb   = number
    }))
  })
```

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
